src/main/kotlin/com/example/bookfinder/error/exception/InvalidOperationException.kt
package com.example.bookfinder.error.exception

/**
 * Custom Exception for invalid user operation.
 */
class InvalidOperationException : RuntimeException {
    constructor(message: String?) : super(message)
}